/ ‘Class_Notes/2019/Analysis/sections/2019-08-27.md’

--- a/Class_Notes/2019/Analysis/sections/2019-08-27.md
+++ b/Class_Notes/2019/Analysis/sections/2019-08-27.md
@@ -145,4 +145,5 @@ But what can be said about closed sets, or all of $\RR^n$?
 **Fact**: 
 Any open set in $\RR^n$ can be written as an *almost disjoint* union of closed cubes.
 
-We can then attempt to ascribe a measure to a set by approximating an open set from the inside by cubes, although it's not clear that this is unique (although it is).
+We can then attempt to ascribe a measure to a set by approximating an open set from the inside by cubes.
+However, it's not clear that this is unique (although it is).
