--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -25,3 +25,5 @@ Thus it converges on any bounded interval.
 It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ## 2
+
+Let $\theset{Q_j} \doublerightarrow E$
