/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -26,4 +26,5 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ## 2
 
-Let $\theset{Q_j} \doublerightarrow E$
+Let $\theset{Q_j} \rightrightarrows E$ be a covering by closed intervals, and then note that $\theset{f(Q_j)} \rightrightarrows f(E)$.
+
