--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -26,5 +26,8 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ## 2
 
+Suppose $E$ is bounded, so $\mathrm{diam}(E) \leq M$.
+
 Let $\theset{Q_j} \rightrightarrows E$ be a covering by closed intervals, and then note that $\theset{f(Q_j)} \rightrightarrows f(E)$.
 
+since $m^*(E) = 0$, we can make the intervals in this covering as small as we'd like
