--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -26,8 +26,18 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ## 2
 
-Suppose first that $E$ is bounded, so $\mathrm{diam}(E) \leq M$.
+Suppose first that $E$ is bounded, so $x\in E \implies \abs{x} \leq M$.
 
 Let $\theset{Q_j} \rightrightarrows E$ be a covering by closed intervals, and then note that $\theset{f(Q_j)} \rightrightarrows f(E)$.
 
-since $m^*(E) = 0$, we can make the intervals in this covering as small as we'd like
+Since $m^*(E) = 0$, we can make the intervals in this covering as small as we'd like.
+
+If $Q_j = [a_j, b_j]$, then $f(Q_j) = Q_j^2 = [a_j^2, b_j^2]$ and thus 
+$$
+\abs{Q_j^2} = (b_j^2 - a_j^2) = (b_j - a_j)(b_j+ a_j) = \abs{Q_j} (b_i+ a_i) \leq \abs{Q_j}\cdot 2M,
+$$
+
+so choose cubes such that 
+$$
+\abs{Q_j} \leq \frac{}{2^j}
+$$
