/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -34,7 +34,7 @@ Since $m^*(E) = 0$, we can make the intervals in this covering as small as we'd 
 
 If $Q_j = [a_j, b_j]$, then $f(Q_j) = Q_j^2 = [a_j^2, b_j^2]$ and thus 
 $$
-\abs{Q_j^2} = (b_j^2 - a_j^2) = (b_j - a_j)(b_j+ a_j) = \abs{Q_j} (b_i+ a_i) \leq \abs{Q_j}\cdot 2M,
+\abs{Q_j^2} = (b_j^2 - a_j^2) = (b_j - a_j)(b_j+ a_j) = \abs{Q_j} (b_j+ a_j) \leq \abs{Q_j}\cdot 2M,
 $$
 
 so choose cubes such that 
