/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -32,12 +32,14 @@ Let $\theset{Q_j} \rightrightarrows E$ be a covering by closed intervals, and th
 
 Since $m^*(E) = 0$, we can make the intervals in this covering as small as we'd like.
 
-If $Q_j = [a_j, b_j]$, then $f(Q_j) = Q_j^2 = [a_j^2, b_j^2]$ and thus 
+If $Q_j = [a_j, b_j]$, then $\abs{Q_j} = \abs{b_i - a_i}$ and $f(Q_j) = Q_j^2 = [a_j^2, b_j^2]$ and thus 
 $$
-\abs{Q_j^2} = (b_j^2 - a_j^2) = (b_j - a_j)(b_j+ a_j) = \abs{Q_j} (b_j+ a_j) \leq \abs{Q_j}\cdot 2M,
+\abs{Q_j^2} = \abs{b_j^2 - a_j^2} = \abs{b_j - a_j}\abs{b_j+ a_j} = \abs{Q_j} \abs{b_j+ a_j} \leq \abs{Q_j}\cdot 2M,
 $$
 
 so choose cubes such that 
 $$
-\abs{Q_j} \leq \frac{}{2^j}
-$$
+\abs{Q_j} \leq \frac{\varepsilon}{2M \cdot 2^j} \implies m^*(E^2) \leq \sum_j \abs{Q_j^2} \leq \sum_j \frac{\varepsilon}{2M\cdot 2^j} = \varepsilon \to 0
+,$$
+
+so $m_*(E^2) = 0$.
