--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -39,14 +39,13 @@ $$
 
 so choose cubes such that 
 \begin{align*}
-\abs{Q_j} \leq \frac{\varepsilon}{2M \cdot 2^j} \\
+\abs{Q_j} 
+&\leq \frac{\varepsilon}{2M \cdot 2^j} \\
 \implies m^*(E^2) 
 &\leq \sum_j \abs{Q_j^2} \\ 
 &\leq \sum_j \abs{Q_j} \cdot 2M  \\
 &\leq \sum_j \frac{2M \varepsilon}{2M\cdot 2^j}  \\
 &= \varepsilon \to 0
 ,\end{align*}
-
-
 
 so $m_*(E^2) = 0$.
