/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -26,6 +26,8 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ## 2
 
+$\implies$:
+
 Suppose first that $E$ is bounded, so $x\in E \implies \abs{x} \leq M$.
 
 Let $\theset{Q_j} \rightrightarrows E$ be a covering by closed intervals, and then note that $\theset{f(Q_j)} \rightrightarrows f(E)$.
