/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -55,3 +55,6 @@ so $m_*(E^2) = 0$.
 $\impliedby$:
 
 Let $F = f(E)$, then just note that $F =
+
+> Lemma: $f, f\inv$ are Lipschitz on any compact interval
+> Lemma: If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
