/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -56,5 +56,11 @@ $\impliedby$:
 
 Let $F = f(E)$, then just note that $F =
 
-> Lemma: $f, f\inv$ are Lipschitz on any compact interval
-> Lemma: If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
+**Lemma:** 
+$f, f\inv$ are Lipschitz on any compact interval
+ 
+*Proof:*
+Since both $f, f\inv \in C^1([0, M])$ for any $M$, they are differentiable
+ 
+**Lemma:** 
+If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
