/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -60,7 +60,11 @@ Let $F = f(E)$, then just note that $F =
 $f, f\inv$ are Lipschitz on any compact interval
  
 *Proof:*
-Since both $f, f\inv \in C^1([0, M])$ for any $M$, they are differentiable
- 
+Let $g = f$ or $f\inv$. 
+Then $g\in C^1([0, M])$ for any $M$, so $g$ is differentiable and $g'$ is continuous.
+Since $g'$ is continuous on a compact interval, it is bounded, so $\abs{g'(x)} \leq L$ for all $x$.
+Applying the MVT,
+
+  
 **Lemma:** 
 If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
