/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -64,7 +64,9 @@ Let $g = f$ or $f\inv$.
 Then $g\in C^1([0, M])$ for any $M$, so $g$ is differentiable and $g'$ is continuous.
 Since $g'$ is continuous on a compact interval, it is bounded, so $\abs{g'(x)} \leq L$ for all $x$.
 Applying the MVT,
-
+\begin{align*}
+\abs{f(x) - f(y)} = f'(c) \abs{x-y} \leq L \abs{x-y}
+.\end{align*}
   
 **Lemma:** 
 If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
