/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -70,3 +70,6 @@ Applying the MVT,
   
 **Lemma:** 
 If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
+
+*Proof:*
+If $g$ is Lipschitz, then $\abs{B_r(x)} \leq L \abs{g(B_r(x))}$
