/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -72,4 +72,4 @@ Applying the MVT,
 If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
 
 *Proof:*
-If $g$ is Lipschitz, then $g(B_r(x)) \subseteq B_{Lr}(x)$.
+If $g$ is Lipschitz, then $g(B_r(x)) \subseteq B_{Lr}(x)$ and $m^*()
