/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -69,7 +69,7 @@ Applying the MVT,
 .\end{align*}
   
 **Lemma:** 
-If $g$ is Lipschitz, then $m(E) = 0 \iff m(g(E)) = 0$.
+If $g$ is Lipschitz on $\RR^n$, then $m(E) = 0 \iff m(g(E)) = 0$.
 
 *Proof:*
-If $g$ is Lipschitz on $\RR^n$, then $g(B_r(x)) \subseteq B_{Lr}(x)$, which is a dilated ball, and so $m^*(B_{Lr}(x)) = L^n m^*(B_{r}(x))$.
+If $g$ is Lipschitz, then $g(B_r(x)) \subseteq B_{Lr}(x)$, which is a dilated ball, and so $m^*(B_{Lr}(x)) = L^n m^*(B_{r}(x))$.
