/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -77,5 +77,5 @@ $$g(B_r(x)) \subseteq B_{Lr}(x)
 ,$$ 
 which is a dilated ball, and so 
 $$
-m^*(B_{Lr}(x)) = L^n m^*(B_{r}(x))
+m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
 .$$
