/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -73,7 +73,8 @@ If $g$ is Lipschitz on $\RR^n$, then $m(E) = 0 \iff m(g(E)) = 0$.
 
 *Proof:*
 If $g$ is Lipschitz, then 
-$$g(B_r(x)) \subseteq B_{Lr}(x)
+$$
+g(B_r(x)) \subseteq B_{Lr}(x)
 ,$$ 
 which is a dilated ball, and so 
 $$
@@ -81,3 +82,6 @@ m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
 .$$
 
 But then
+\begin{align*}
+m^*(g(B_r(x)))
+.\end{align*}
