/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -76,12 +76,12 @@ If $g$ is Lipschitz, then
 $$
 g(B_r(x)) \subseteq B_{Lr}(x)
 ,$$ 
-which is a dilated ball, and so 
+which is a dilated ball/cube, and so 
 $$
 m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
 .$$
 
-But then
+Now cover $E$ with balls/cubes $Q_
 \begin{align*}
-m^*(g(B_r(x)))
+m^*(g(E))
 .\end{align*}
