/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -81,7 +81,12 @@ $$
 m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
 .$$
 
-Now cover $E$ with balls/cubes $Q_
+Now choose $\theset{Q_j} \rightrightarrows E$; then $\theset{g(Q_j)} \rightrightarrows g(E)$.
+
+By the above observation,
+
+
+then each $Q_j$ satisfies the above inequality, so
 \begin{align*}
-m^*(g(E))
+m^*(g(E)) \leq \sum_j \abs{g(Q_j)}
 .\end{align*}
