/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -26,36 +26,6 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ## 2
 
-$\implies$:
-
-Suppose first that $E$ is bounded, so $x\in E \implies \abs{x} \leq M$.
-
-Let $\theset{Q_j} \rightrightarrows E$ be a covering by closed intervals, and then note that $\theset{f(Q_j)} \rightrightarrows f(E)$.
-
-Since $m^*(E) = 0$, we can make the intervals in this covering as small as we'd like.
-
-If $Q_j = [a_j, b_j]$, then $\abs{Q_j} = \abs{b_i - a_i}$ and $f(Q_j) = Q_j^2 = [a_j^2, b_j^2]$ and thus 
-$$
-\abs{Q_j^2} = \abs{b_j^2 - a_j^2} = \abs{b_j - a_j}\abs{b_j+ a_j} = \abs{Q_j} \abs{b_j+ a_j} \leq \abs{Q_j}\cdot 2M,
-$$
-
-so choose cubes such that 
-\begin{align*}
-\abs{Q_j} 
-&\leq \frac{\varepsilon}{2M \cdot 2^j} \\
-\implies m^*(E^2) 
-&\leq \sum_j \abs{Q_j^2} \\ 
-&\leq \sum_j \abs{Q_j} \cdot 2M  \\
-&\leq \sum_j \frac{2M \varepsilon}{2M\cdot 2^j}  \\
-&= \varepsilon \to 0
-,\end{align*}
-
-so $m_*(E^2) = 0$.
-
-$\impliedby$:
-
-Let $F = f(E)$, then just note that $F =
-
 **Lemma:** 
 $f, f\inv$ are Lipschitz on any compact interval
  
@@ -84,9 +54,13 @@ m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
 Now choose $\theset{Q_j} \rightrightarrows E$; then $\theset{g(Q_j)} \rightrightarrows g(E)$.
 
 By the above observation,
-
-
-then each $Q_j$ satisfies the above inequality, so
 \begin{align*}
-m^*(g(E)) \leq \sum_j \abs{g(Q_j)}
+\abs{g(Q_j)} \leq L^n \abs{Q_j}
+,\end{align*}
+
+and so 
+\begin{align*}
+m^*(g(E)) \leq \sum_j \abs{g(Q_j)} \leq \sum_j L^n \abs{Q_j} = L^n \sum_j \abs{Q_j} \to 0 
 .\end{align*}
+
+$\qed$
