/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -39,7 +39,7 @@ Applying the MVT,
 .\end{align*}
   
 **Lemma:** 
-If $g$ is Lipschitz on $\RR^n$, then $m(E) = 0 \iff m(g(E)) = 0$.
+If $g$ is Lipschitz on $\RR^n$, then $m(E) = 0 \implies m(g(E)) = 0$.
 
 *Proof:*
 If $g$ is Lipschitz, then 
@@ -63,4 +63,5 @@ and so
 m^*(g(E)) \leq \sum_j \abs{g(Q_j)} \leq \sum_j L^n \abs{Q_j} = L^n \sum_j \abs{Q_j} \to 0 
 .\end{align*}
 
+Now just take $g(x) = x^2$ for one direction, and $g(x) = f\inv(x) = \sqrt{x}$ for the other.
 $\qed$
