/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -27,7 +27,7 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 ## 2
 
 **Lemma:** 
-$f, f\inv$ are Lipschitz on any compact interval
+$f(x) = x^2, f\inv(x) = \sqrt{x}$ are Lipschitz on any compact subset of $[0, \infty)$.
  
 *Proof:*
 Let $g = f$ or $f\inv$. 
