/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -46,7 +46,7 @@ If $g$ is Lipschitz, then
 $$
 g(B_r(x)) \subseteq B_{Lr}(x)
 ,$$ 
-which is a dilated ball/cube, and so 
+which is a dilated cube, and so 
 $$
 m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
 .$$
