/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -48,7 +48,7 @@ g(B_r(x)) \subseteq B_{Lr}(x)
 ,$$ 
 which is a dilated ball/cube, and so 
 $$
-m^*(B_{Lr}(x)) \leq L^n m^*(B_{r}(x))
+m^*(B_{Lr}(x)) \leq L^n \cdot m^*(B_{r}(x))
 .$$
 
 Now choose $\theset{Q_j} \rightrightarrows E$; then $\theset{g(Q_j)} \rightrightarrows g(E)$.
