/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -70,4 +70,6 @@ $\qed$
 
 ### b
 
-Write $E = H \disjoint N$ where $
+Write $E = K \disjoint N$ where $K$ is compact and $N$ is null (always possible, see other qual problems, take union).
+
+Then 
