/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -70,6 +70,10 @@ $\qed$
 
 ### b
 
-Write $E = K \disjoint N$ where $K$ is compact and $N$ is null (always possible, see other qual problems, take union).
+> Lemma: $E$ is measurable iff $E = K \disjoint N$ for some $K$ compact, $N$ null.
 
-Then 
+Write $E = K \disjoint N$ where $K$ is compact and $N$ is null.
+
+Then $\phi\inv(E) = \phi\inv(K \disjoint N) = \phi\inv(K) \disjoint \phi\inv(N)$.
+
+Since $\phi\inv(N)$ is null by part (a) and $\phi\inv(K)$ is the preimage of a compact set under a continuous map and thus compact, $\phi\inv(E) = K' \disjoint N'$ where $K'$ is compact and $N'$ is null, so $\phi\inv(E)$ is measurable.
