--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -28,6 +28,8 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 
 ### a
 
+It suffices to consider the bounded case, i.e. $E \subseteq B_M(0)$ for some $M$.
+
 **Lemma:** 
 $f(x) = x^2, f\inv(x) = \sqrt{x}$ are Lipschitz on any compact subset of $[0, \infty)$.
  
