--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -29,7 +29,7 @@ It does not converge on $\RR$, since $x^N$ is unbounded.
 ### a
 
 It suffices to consider the bounded case, i.e. $E \subseteq B_M(0)$ for some $M$.
-Then write $E_n = B_n(0) \intersect E$ and apply the theorem to $E_n$
+Then write $E_n = B_n(0) \intersect E$ and apply the theorem to $E_n$, and by subadditivity, $m^*(E) = m^*(\union_n E_n) \leq \sum_n m^*(E_n) = 0$.
 
 **Lemma:** 
 $f(x) = x^2, f\inv(x) = \sqrt{x}$ are Lipschitz on any compact subset of $[0, \infty)$.
