/ ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex’

--- a/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
+++ b/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
@@ -425,7 +425,7 @@ of \([0, \infty)\) to itself.
 \subsection{3}\label{section-2}}
 
 Let \[
-S = \mathrm{span}_\CC\theset{\chi_{(a, b)} \suchthat a, b \in \RR},
+S = \mathrm{span}_\CC\theset{\chi_{(a, b)} \mid a, b \in \RR},
 \] the complex linear span of characteristic functions of intervals of
 the form \((a, b)\).
 
