/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -85,3 +85,7 @@ So $\phi$ is a measurable function, and thus yields a well-defined map $\mathcal
 Restricting to $[0, \infty)$, $f$ is bijection, and thus so is $\phi$.
 
 $\qed$
+
+## 3
+
+It suffices to show
