--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -90,4 +90,4 @@ $\qed$
 
 It suffices to show that $S$ is dense in the class of simple functions.
 
-Let $s(x) = \sum
+Let $s = \sum_{i=1}^N c_i \chi_{A_i}$ where each $A_i$ is measurable.
