--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -91,3 +91,4 @@ $\qed$
 It suffices to show that $S$ is dense in the class of simple functions.
 
 Let $s = \sum_{i=1}^N c_i \chi_{A_i}$ where each $A_i$ is measurable.
+By regularity of the Lebesgue measure, choose open sets $O_i \supseteq A_i$ such that $m(O_i\setminus A_i) < \varepsilon$.
