--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -92,4 +92,4 @@ It suffices to show that $S$ is dense in the class of simple functions.
 
 Let $s = \sum_{i=1}^N c_i \chi_{A_i}$ where each $A_i$ is measurable.
 By regularity of the Lebesgue measure, choose open sets $O_i \supseteq A_i$ such that $m(O_i\setminus A_i) < \varepsilon$.
-Each $O_i$ is an open subset of $\RR$
+Each $O_i$ is an open subset of $\RR$, and thus $O_i = \disjoint_{j\in \NN} I_j$ is a disjoint union of countably many intervals.
