/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -90,8 +90,10 @@ $\qed$
 
 It suffices to show that $S$ is dense in the class of simple functions.
 
-Let $s = \sum_{i=1}^N c_i \chi_{A_i}$ where each $A_i$ is measurable.
+Let $s = \sum_{i=1}^M c_i \chi_{A_i}$ where each $A_i$ is measurable.
 By regularity of the Lebesgue measure, choose open sets $O_i \supseteq A_i$ such that $m(O_i\setminus A_i) < \varepsilon$.
 Each $O_i$ is an open subset of $\RR$, and thus $O_i = \disjoint_{j\in \NN} I_j$ is a disjoint union of countably many intervals.
 
-Chose let $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N$ large enough such that $m(O_i \setminus I_N) < \varepsilon$
+Chose let $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N_i$ large enough such that $m(O_i \setminus I_{N_i}) < \varepsilon$.
+
+Now define $h = \sum_{i=1}^M \chi_{I_{N_i}}$
