/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -88,12 +88,13 @@ $\qed$
 
 ## 3
 
-It suffices to show that $S$ is dense in the class of simple functions.
+It suffices to show that $S$ is dense in the class of simple functions, and in fact by linearity/finiteness, it suffices to show this for $\chi_A$ for $A$ a measurable set.
 
-Let $s = \sum_{i=1}^M c_i \chi_{A_i}$ where each $A_i$ is measurable.
-By regularity of the Lebesgue measure, choose open sets $O_i \supseteq A_i$ such that $m(O_i\setminus A_i) < \varepsilon$.
-Each $O_i$ is an open subset of $\RR$, and thus $O_i = \disjoint_{j\in \NN} I_j$ is a disjoint union of countably many intervals.
+Let $s = \chi_{A}$.
+By regularity of the Lebesgue measure, choose an open set $O \supseteq A$ such that $m(O\setminus A) < \varepsilon$.
 
-Chose let $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N_i$ large enough such that $m(O_i \setminus I_{N_i}) < \varepsilon$.
+$O$ is an open subset of $\RR$, and thus $O = \disjoint_{j\in \NN} I_j$ is a disjoint union of countably many open intervals.
+
+So define $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N$ large enough such that $m(O \setminus I_{N}) < \varepsilon$.
 
 Now define $h = \sum_{i=1}^M \chi_{I_{N_i}}$
