/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -95,6 +95,6 @@ By regularity of the Lebesgue measure, choose an open set $O \supseteq A$ such t
 
 $O$ is an open subset of $\RR$, and thus $O = \disjoint_{j\in \NN} I_j$ is a disjoint union of countably many open intervals.
 
-So define $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N$ large enough such that $m(O \setminus I_{N}) < \varepsilon$.
+So define $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N$ large enough such that $m(O \Delta I_{N}) < \varepsilon$.
 
-Now define $h = \sum_{i=1}^M \chi_{I_{N_i}}$
+Now define $h = \chi_{I_n}$, then
