/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -102,5 +102,5 @@ Now define $h_k = \chi_{I_{N, k}}$, then
 \norm{s - h_k}_1 = \int \abs{\chi_A - \chi_{I_{N, k}}} \leq m(A \Delta I_N) \converges{k\to\infty}\to 0
 .\end{align*}
 
-Now letting $s = \sum_{j=1}^N c_j \chi_{A_j}$, we can define an $h_{k, j}$ for each $A_j$, and 
-
+Since any simple function is a finite linear combination of $\chi_{A_i}$, we can do this for each $i$ to extend this result to all simple functions.
+But simple functions are dense in $L^1$
