/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -88,7 +88,7 @@ $\qed$
 
 ## 3
 
-It suffices to show that $S$ is dense in the class of simple functions, and in fact by linearity/finiteness, it suffices to show this for $\chi_A$ for $A$ a measurable set.
+It suffices to show that $S$ is dense in simple functions, and since simple functions are *finite* linear combinations of characteristic functions, it suffices to show this for $\chi_A$ for $A$ a measurable set.
 
 Let $s = \chi_{A}$.
 By regularity of the Lebesgue measure, choose an open set $O \supseteq A$ such that $m(O\setminus A) < \varepsilon$.
@@ -103,4 +103,4 @@ Now define $h_k = \chi_{I_{N, k}}$, then
 .\end{align*}
 
 Since any simple function is a finite linear combination of $\chi_{A_i}$, we can do this for each $i$ to extend this result to all simple functions.
-But simple functions are dense in $L^1$
+But simple functions are dense in $L^1$, so $S$ is dense in $L^1$.
