--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -95,9 +95,9 @@ By regularity of the Lebesgue measure, choose an open set $O \supseteq A$ such t
 
 $O$ is an open subset of $\RR$, and thus $O = \disjoint_{j\in \NN} I_j$ is a disjoint union of countably many open intervals.
 
-So define $I_N \definedas \disjoint_{j=1}^N I_j$, and choose $N$ large enough such that $m(O \Delta I_{N, k}) < \varepsilon = \frac 1 k$.
+Now choose $N$ large enough such that $m(O \Delta I_{N, n}) < \varepsilon = \frac 1 n$ where we define $I_{N, n} \definedas \disjoint_{j=1}^N I_j$.
 
-Now define $h_k = \chi_{I_{N, k}}$, then
+Now define $f_n = \chi_{I_{N, n}}$, then
 \begin{align*}
 \norm{s - h_k}_1 = \int \abs{\chi_A - \chi_{I_{N, k}}} \leq m(A \Delta I_N) \converges{k\to\infty}\to 0
 .\end{align*}
