/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -99,7 +99,7 @@ Now choose $N$ large enough such that $m(O \Delta I_{N, n}) < \varepsilon = \fra
 
 Now define $f_n = \chi_{I_{N, n}}$, then
 \begin{align*}
-\norm{s - f_n}_1 = \int \abs{\chi_A - \chi_{I_{N, n}}} \leq m(A \Delta I_{N, n}) \converges{n\to\infty}\longrightarrow 0
+\norm{s - f_n}_1 = \int \abs{\chi_A - \chi_{I_{N, n}}} = m(A \Delta I_{N, n}) \converges{n\to\infty}\longrightarrow 0
 .\end{align*}
 
 Since any simple function is a finite linear combination of $\chi_{A_i}$, we can do this for each $i$ to extend this result to all simple functions.
