--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -88,6 +88,8 @@ $\qed$
 
 ## 3
 
+> From homework: $E$ is Lebesgue measurable iff there exists a 
+
 It suffices to show that $S$ is dense in simple functions, and since simple functions are *finite* linear combinations of characteristic functions, it suffices to show this for $\chi_A$ for $A$ a measurable set.
 
 Let $s = \chi_{A}$.
