/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -111,4 +111,5 @@ But simple functions are dense in $L^1$, so $S$ is dense in $L^1$.
 
 ### a
 
-Let $G(x) = \sum_{n=1}^\infty nx(x-1)^n
+Let $G(x) = \sum_{n=1}^\infty nx(1-x)^n$. 
+Applying the ratio test, we have
