/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -113,3 +113,9 @@ But simple functions are dense in $L^1$, so $S$ is dense in $L^1$.
 
 Let $G(x) = \sum_{n=1}^\infty nx(1-x)^n$. 
 Applying the ratio test, we have
+\begin{align*}
+\abs{\frac{(n+1)x(1-x)^{n+1}}{nx(1-x)^n}} = \frac{n+1}{n} \abs{1-x} \converges{n\to\infty}\to \abs{1-x} < 1 \iff 0 \leq x \leq 2
+,\end{align*}
+
+and in particular, this series converges on $[0, 2]$. 
+Thus its terms go to zero, and $nx(1-x)^n \to 0$ on $[0, 1] \subset [0, 2]$.
