/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -120,8 +120,7 @@ Applying the ratio test, we have
 and in particular, this series converges on $[0, 2]$. 
 Thus its terms go to zero, and $nx(1-x)^n \to 0$ on $[0, 1] \subset [0, 2]$.
 
-To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsilon = 1$
-
+To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsilon = 1$, then
 \begin{align*}
 \sup_{x\in [0, 1]}\abs{nx(1-x)^n} 
 \geq \abs{nx_n (1-x_n)^n} 
