/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -126,7 +126,7 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 \geq \abs{nx_n (1-x_n)^n} 
 = \abs{\left( 1 - \frac 1 n\right)^n} 
 \converges{n\to\infty}\to e 
-> \varepsilon
+> 1 = \varepsilon
 .\end{align*}
 
 
