/ ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex’

--- a/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
+++ b/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
@@ -451,7 +451,7 @@ f_{n}(x)=n x(1-x)^{n}, \quad n \in \mathbb{N}.
   \end{quote}
 \item
   \[
-  \lim _{n \rightarrow \infty} \int_{0}^{1} n(1-x)^{n} \sin x d x=0
+    \lim _{n \rightarrow \infty} \int_{0}^{1} n(1-x)^{n} \sin(x) ~d x=0
   \]
 \end{enumerate}
 
