/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -133,3 +133,6 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 ### b
 
 We have
+\begin{align*}
+\abs{\int n(1-x)^{n}}
+.\end{align*}
