--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -134,5 +134,10 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 
 We have
 \begin{align*}
-\abs{\int n(1-x)^{n}}
+\abs{\int n(1-x)^{n} \sin(x)} 
+&\leq \int \abs{n(1-x)^n \sin(x)} \\
+&\leq \int \abs{n(1-x)^n}  \\
+&= \int n(x-1)^n \\
+&= \frac{-n(1-x)^{n+1}}{n+1} \\
+&\converges{n\to\infty}0
 .\end{align*}
