/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -139,5 +139,5 @@ We have
 &\leq \int \abs{n(1-x)^n}  \\
 &= \int n(x-1)^n \\
 &= \frac{-n(1-x)^{n+1}}{n+1} \\
-&\converges{n\to\infty}0
+&\converges{n\to\infty}\longrightarrow 0
 .\end{align*}
