/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -132,4 +132,4 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 
 ### b
 
-Noting that the integrand is bounded by $g(x) = 
+Noting that $\sin(x) \leq x$, the integrand is bounded by $g_n(x) = nx(1-x)^n$.
