--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -138,7 +138,6 @@ We have
 \abs{\int n(1-x)^{n} \sin(x)} 
 &\leq \int \abs{n(1-x)^n \sin(x)} \\
 &\leq \int \abs{nx (1-x)^n}  \\
-&= \int n(x-1)^n \\
-&= \frac{-n(1-x)^{n+1}}{n+1} \\
-&\converges{n\to\infty}\longrightarrow 0
+&= \int nx(x-1)^n \\
+&= 
 .\end{align*}
