/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -138,6 +138,6 @@ We have
 \abs{\int n(1-x)^{n} \sin(x)} 
 &\leq \int \abs{n(1-x)^n \sin(x)} \\
 &\leq \int \abs{nx (1-x)^n}  \\
-&= \int nx(x-1)^n \\
-&= 
+&= n\int x(x-1)^n \\
+&= n
 .\end{align*}
