/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -139,5 +139,5 @@ We have
 &\leq \int \abs{n(1-x)^n \sin(x)} \\
 &\leq \int \abs{nx (1-x)^n}  \\
 &= n\int x(x-1)^n \\
-&= n
+&= n \frac{(n+2) x(1-x)^{n+1} + (1-x)^{n+2}}{(n+1)(n+2)}
 .\end{align*}
