--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -135,9 +135,9 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 Noting that $\sin(x) \leq x$, we have
 We have
 \begin{align*}
-\abs{\int n(1-x)^{n} \sin(x)} 
-&\leq \int \abs{n(1-x)^n \sin(x)} \\
-&\leq \int \abs{nx (1-x)^n}  \\
-&= n\int x(x-1)^n \\
-&= n \frac{(n+2) x(1-x)^{n+1} + (1-x)^{n+2}}{(n+1)(n+2)}
+\abs{\int_0^1  n(1-x)^{n} \sin(x)} 
+&\leq \int_0^1  \abs{n(1-x)^n \sin(x)} \\
+&\leq \int_0^1  \abs{nx (1-x)^n}  \\
+&= n\int_0^1 x(x-1)^n \\
+&=
 .\end{align*}
