/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -137,7 +137,7 @@ We have
 \begin{align*}
 \abs{\int_0^1  n(1-x)^{n} \sin(x)} 
 &\leq \int_0^1  \abs{n(1-x)^n \sin(x)} \\
-&\leq \int_0^1  \abs{nx (1-x)^n}  \\
-&= n\int_0^1 x(x-1)^n \\
+&\leq \int_0^1  \abs{n (1-x)^n}  \\
+&= n\int_0^1 (x-1)^n \\
 &=
 .\end{align*}
