--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -132,12 +132,13 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 
 ### b
 
-Noting that $\sin(x) \leq x$, we have
+Noting that $\sin(x) \leq 1$, we have
 We have
 \begin{align*}
 \abs{\int_0^1  n(1-x)^{n} \sin(x)} 
 &\leq \int_0^1  \abs{n(1-x)^n \sin(x)} \\
 &\leq \int_0^1  \abs{n (1-x)^n}  \\
-&= n\int_0^1 (x-1)^n \\
-&=
+&= n\int_0^1 (1-x)^n \\
+&= -\frac{n(1-x)^{n+1}}{n+1} \\
+&\converges{n\to\infty}\longrightarrow 0
 .\end{align*}
