/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -132,6 +132,8 @@ To see that the convergence is not uniform, let $x_n = \frac 1 n$ and $\varepsil
 
 ### b
 
+> Note: could use the first part with $\sin(x) \leq x$, but then integral ends up more complicated.
+
 Noting that $\sin(x) \leq 1$, we have
 We have
 \begin{align*}
@@ -142,3 +144,5 @@ We have
 &= -\frac{n(1-x)^{n+1}}{n+1} \\
 &\converges{n\to\infty}\longrightarrow 0
 .\end{align*}
+
+## 5
