/ ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.pdf’ / ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.synctex.gz’ / ‘Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex’

--- a/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
+++ b/Class_Notes/2019/Analysis/Review/Quals/QualQuestions.tex
@@ -460,7 +460,7 @@ f_{n}(x)=n x(1-x)^{n}, \quad n \in \mathbb{N}.
 
 Let \(\phi\) be a compactly supported smooth function that vanishes
 outside of an interval \([-N, N]\) such that
-\(\int_{\mathrm{R}} \phi(x) d x=1\).
+\(\int_{\RR} \phi(x) d x=1\).
 
 For \(f\in L^1(\RR)\), define \[
 K_{j}(x):=j \phi(j x), \quad \quad f \ast K_{j}(x):=\int_{\mathbb{R}} f(x-y) K_{j}(y)~dy
