/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -157,5 +157,7 @@ $\dd{}{x} (f \ast \phi) = f \ast (\dd{}{x} \phi)$
 
 Define
 \begin{align*}
-D_h \phi \definedas 
+D_h \phi(x) \definedas \frac 1 h (\phi(x+h) - \phi(x))
 .\end{align*}
+
+Then $D_h\phi \converges{h\to 0}\longrightarrow \dd{}{x}\phi$.
