/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -160,4 +160,4 @@ Define
 D_h \phi(x) \definedas \frac 1 h (\phi(x+h) - \phi(x))
 .\end{align*}
 
-Then $D_h\phi \converges{h\to 0}\longrightarrow \dd{}{x}\phi$.
+Then $D_h\phi \converges{h\to 0}\longrightarrow \dd{}{x}\phi$ pointwise by definition.
