/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -163,3 +163,6 @@ D_h \phi(x) \definedas \frac 1 h (\phi(x+h) - \phi(x))
 Then $D_h\phi \converges{h\to 0}\longrightarrow \dd{}{x}\phi$ pointwise by definition.
 It also converges uniformly.
 
+\begin{align*}
+\abs{\dd{}{x} (f \ast \phi) - f \ast (\dd{}{x} \phi)}
+.\end{align*}
