--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -165,5 +165,5 @@ It also converges uniformly.
 
 \begin{align*}
 \abs{\dd{}{x} (f \ast \phi) - f \ast (\dd{}{x} \phi)} 
-&= \frac 1 h
+&= \frac {} h
 .\end{align*}
