--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -165,5 +165,5 @@ It also converges uniformly.
 
 \begin{align*}
 \abs{\dd{}{x} (f \ast \phi) - f \ast (\dd{}{x} \phi)} 
-&= \frac {f\ast \phi(x+h) - f\ast \phi(x)} h - 
+&= \frac {f\ast \phi(x+h) - f\ast \phi(x)} h - f \ast
 .\end{align*}
