/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -164,6 +164,10 @@ Then $D_h\phi \converges{h\to 0}\longrightarrow \dd{}{x}\phi$ pointwise by defin
 It also converges uniformly.
 
 \begin{align*}
-\abs{\dd{}{x} (f \ast \phi) - f \ast (\dd{}{x} \phi)} 
-&= \frac {f\ast \phi(x+h) - f\ast \phi(x)} h - f \ast
+\abs{
+	\dd{}{x} (f \ast \phi) - f \ast (\dd{}{x} \phi)
+} 
+&= \abs{
+	\frac {f\ast \phi(x+h) - f\ast \phi(x)} h - f \ast\dd{}{x} \phi
+}
 .\end{align*}
