/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -165,7 +165,7 @@ It also converges uniformly.
 
 \begin{align*}
 \abs{
-	\dd{}{x} (f \ast \phi) - f \ast (\dd{}{x} \phi)
+	\dd{}{x} (\phi \ast f) - f \ast (\dd{}{x} \phi)
 } 
 &= \abs{
 	\frac {f\ast \phi(x+h) - f\ast \phi(x)} h - f \ast\dd{}{x} \phi
