/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -165,9 +165,9 @@ It also converges uniformly.
 
 \begin{align*}
 \abs{
-	\dd{}{x} (\phi \ast f) - f \ast (\dd{}{x} \phi)
+	(\phi \ast f)_x - \phi_x \ast f
 } 
 &= \abs{
-	\frac {f\ast \phi(x+h) - f\ast \phi(x)} h - f \ast\dd{}{x} \phi
-}
+	\frac {(\phi \ast f)(x+h) - (\phi\ast f)(x)} h - \phi_x \ast f
+} \\
 .\end{align*}
