/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -170,4 +170,10 @@ It also converges uniformly.
 &= \abs{
 	\frac {(\phi \ast f)(x+h) - (\phi\ast f)(x)} h - \phi_x \ast f
 } \\
+&= \abs{\int \left[ \frac{
+	\phi(x+h-y) - \phi(x-y)
+}{
+h
+} - \phi_x(x-y) \right]  
+f(y) ~dy}
 .\end{align*}
