/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -176,7 +176,7 @@ It also converges uniformly.
 h
 } - \phi_x(x-y) \right]  
 f(y) ~dy} \\
-&= \int \left[ D_h \phi(x-y) - \phi_x(x-y) \right] f(y) ~dy \\
+&= \abs{\int \left[ D_h \phi(x-y) - \phi_x(x-y) \right] f(y) ~dy} \\
 &= ((D_h\phi - \phi_x)\ast f)(x) \\
 &\leq 
 .\end{align*}
