/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -153,30 +153,6 @@ We have
 **Lemma:** 
 $\dd{}{x} (f \ast \phi) = f \ast (\dd{}{x} \phi)$
 
-*Proof:*
+*Silly Proof:*
 
-Define
-\begin{align*}
-D_h \phi(x) \definedas \frac 1 h (\phi(x+h) - \phi(x))
-.\end{align*}
 
-Then $D_h\phi \converges{h\to 0}\longrightarrow \dd{}{x}\phi$ pointwise by definition.
-It also converges uniformly.
-
-\begin{align*}
-\abs{
-	(\phi \ast f)_x - \phi_x \ast f
-} 
-&= \abs{
-	\frac {(\phi \ast f)(x+h) - (\phi\ast f)(x)} h - \phi_x \ast f
-} \\
-&= \abs{\int \left[ \frac{
-	\phi(x+h-y) - \phi(x-y)
-}{
-h
-} - \phi_x(x-y) \right]  
-f(y) ~dy} \\
-&= \abs{\int \left[ D_h \phi(x-y) - \phi_x(x-y) \right] f(y) ~dy} \\
-&= ((D_h\phi - \phi_x)\ast f)(x) \\
-&\leq 
-.\end{align*}
