/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -151,8 +151,18 @@ We have
 ### a
 
 **Lemma:** 
-$\dd{}{x} (f \ast \phi) = f \ast (\dd{}{x} \phi)$
+$(f \ast g)' = f \ast g'$ almost everywhere.
 
 *Silly Proof:*
 
+\begin{align*}
+\mathcal{F}(
+	(f \ast g)'
+ )
+&= 2\pi i \xi \cdot \mathcal{F}(f\ast g) \\
+&= 2\pi i \xi \cdot \mathcal{F}(f) ~\mathcal{F}(g) \\
+&= \mathcal{F}(f) \cdot 2\pi i \xi \cdot \mathcal{F}(g) \\
+&= \mathcal{F}(f) \cdot \mathcal{F}(g') \\
+&= \mathcal{F}(f\ast g')
+.\end{align*}
 
