/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -159,10 +159,11 @@ $(f \ast g)' = f \ast g'$ almost everywhere.
 \mathcal{F}(
 	(f \ast g)'
  )
-&= 2\pi i \xi \cdot \mathcal{F}(f\ast g) \\
-&= 2\pi i \xi \cdot \mathcal{F}(f) ~\mathcal{F}(g) \\
-&= \mathcal{F}(f) \cdot 2\pi i \xi \cdot \mathcal{F}(g) \\
+&= 2\pi i \xi ~\mathcal{F}(f\ast g) \\
+&= 2\pi i \xi ~ \mathcal{F}(f) ~ \mathcal{F}(g) \\
+&= \mathcal{F}(f) \cdot \left( 2\pi i \xi ~\mathcal{F}(g)\right) \\
 &= \mathcal{F}(f) \cdot \mathcal{F}(g') \\
 &= \mathcal{F}(f\ast g')
 .\end{align*}
 
+*Actual proof*
