/ ‘Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md’

--- a/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
+++ b/Class_Notes/2019/Analysis/Review/Quals/Solutions/Fall 2017.md
@@ -151,7 +151,7 @@ We have
 ### a
 
 **Lemma:** 
-$(f \ast g)' = f \ast g'$ almost everywhere.
+$(f \ast g)' = f \ast g' = f' \ast g$ almost everywhere.
 
 *Silly Proof:*
 
@@ -168,3 +168,14 @@ $(f \ast g)' = f \ast g'$ almost everywhere.
 
 *Actual proof*
 
+\begin{align*}
+(f\ast g)'(x)
+&= \lim_{h\to 0} \frac{(f\ast g)'(x+h) - (f\ast g)'(x)}{h} \\
+&= \lim_{h\to 0} \frac 1 h \int \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
+&\overset{DCT}=  \int \lim_{h\to 0} \frac 1 h \frac{f(x + h - y) - f(x - y)}{h} g(y) \\
+.\end{align*}
+ 
+
+ To see that the DCT is justified,
+
+ 
